MAINT-48844:Preventx tooltip displaying on mobile view (#299) (#301)
ISSUE: when using v-tooltip on any element it will be displayed on hover and click event except the v-btn element which is triggered only on hover event
FIX: Use the v-btn element instead as a wokaround because this issue comes from vuetify itself.

--- a/notes-webapp/src/main/webapp/skin/less/notes/notes.less
+++ b/notes-webapp/src/main/webapp/skin/less/notes/notes.less
@@ -170,7 +170,7 @@
           min-width: 100px!important;
           position: relative;
           button {
-            padding: 1px 2px!important;
+            padding: 1px 2px;
           }
           .note-actions-menu {
             min-width: 150px!important;
